--- a/users/templates/candidatehome.html
+++ b/users/templates/candidatehome.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{%extends 'base.html'%}
+
+{%block body_block%}
 <h1>welcome candidate</h1>
 
-</body>
-</html>
+{%endblock%}
