--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -17,7 +17,7 @@
       <form action="" method="post">
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="register">
+        <input type="submit" value="Submit">
       </form>
     </div>
     <div class="col-4"></div>
