--- a/employer/templates/emp-home.html
+++ b/employer/templates/emp-home.html
@@ -12,5 +12,6 @@
 {%else%}
     <a href="{%url 'emp-profile'%}">add profile</a>
 {%endif%}
+<a href="{%url 'emp-addjob'%}">Post Job</a>
 </body>
 </html>
