job detail view

--- a/employer/templates/emp-home.html
+++ b/employer/templates/emp-home.html
@@ -13,5 +13,6 @@
     <a href="{%url 'emp-profile'%}">add profile</a>
 {%endif%}
 <a href="{%url 'emp-addjob'%}">Post Job</a>
+<a href="{%url 'emp-listjob'%}">Posted Jobs</a>
 </body>
 </html>
