--- a/employer/templates/emp-joblist.html
+++ b/employer/templates/emp-joblist.html
@@ -21,6 +21,8 @@
                 experience:{{job.experience}}
                 created_date:{{job.created_date}}
                 <a href="{%url 'emp-jobdetail' job.id%}">Details</a>
+                <a href="">Update</a>
+                <a href="">View Application</a>
             </div>
             {%endfor%}
         </div>
