--- a/employer/templates/emp-home.html
+++ b/employer/templates/emp-home.html
@@ -2,17 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>emp-home</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
+
 </head>
 <body>
-<h1>welcome {{request.user}}</h1>
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Employer</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav me-auto mb-2 mb-lg-0">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                {%if request.user.employer%}
+                <a class="nav-link" href="{%url 'emp-profdetail'%}">view profile</a>
+                {%else%}
+                <a class="nav-link" href="{%url 'emp-profile'%}">add profile</a>
+                {%endif%}
+                <a class="nav-link" href="{%url 'emp-addjob'%}">Post Job</a>
+                <a class="nav-link" href="{%url 'emp-listjob'%}">Posted Jobs</a>
 
-{%if request.user.employer%}
-    <a href="{%url 'emp-profdetail'%}">view profile</a>
-{%else%}
-    <a href="{%url 'emp-profile'%}">add profile</a>
-{%endif%}
-<a href="{%url 'emp-addjob'%}">Post Job</a>
-<a href="{%url 'emp-listjob'%}">Posted Jobs</a>
+            </div>
+            <div class="navbar-nav mr-auto mb-2 mb-lg-0">
+                <a class="btn btn-outline-warning" href="#">logout</a>
+            </div>
+        </div>
+    </div>
+</nav>
 </body>
 </html>
+
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Title</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>welcome {{request.user}}</h1>-->
+
+<!--{%if request.user.employer%}-->
+<!--    <a href="{%url 'emp-profdetail'%}">view profile</a>-->
+<!--{%else%}-->
+<!--    <a href="{%url 'emp-profile'%}">add profile</a>-->
+<!--{%endif%}-->
+<!--<a href="{%url 'emp-addjob'%}">Post Job</a>-->
+<!--<a href="{%url 'emp-listjob'%}">Posted Jobs</a>-->
+<!--</body>-->
+<!--</html>-->
