--- a/employer/templates/emp-jobdetail.html
+++ b/employer/templates/emp-jobdetail.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
 
 
 </head>
@@ -15,13 +18,15 @@
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            {{request.user}}
-            {{job.job_tiile}}
-            {{job.posted_by}}
-            {{job.job_description}}
-            {{job.salary}}
+            {{request.user}} <br>
+            {{job.job_title}} <br>
+            {{job.posted_by}} <br>
+            {{job.job_description}} <br>
+            {{job.salary}} <br>
         </div>
-        <div class="col-4"></div>
+        <div class="col-4">
+
+        </div>
     </div>
 </div>
 </body>
