--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -10,6 +10,25 @@
 
 </head>
 <body>
+<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav me-auto mb-2 mb-lg-0">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <!-- <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#">Pricing</a> -->
+            </div>
+            <div class="navbar-nav mr-auto mb-2 mb-lg-0">
+                <a class="btn btn-outline-info" href="">SIGN IN</a>
+                <a class="btn btn-outline-warning" href="">SIGN UP</a>
+            </div>
+          </div>
+        </div>
+    </nav>
 {%block body_block%}
 
 {%endblock%}
