--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>user: Login</title>
   <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <!-- JavaScript Bundle with Popper -->
@@ -14,10 +14,11 @@
   <div class="row">
     <div class="col-4"></div>
     <div class="col-4">
+      <h1 class="text-center">Login</h1>
       <form action="" method="post">
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="Submit">
+        <input type="submit" class="btn btn-success" value="Submit">
       </form>
     </div>
     <div class="col-4"></div>
