list,detail,apply view:-candidates

--- a/candidate/templates/cand-home.html
+++ b/candidate/templates/cand-home.html
@@ -30,7 +30,7 @@
                 {%else%}
                 <a class="nav-link" href="{%url 'cand-addprofile'%}">add profile</a>
                 {%endif%}
-                <a class="nav-link" href="#">all Jobs</a>
+                <a class="nav-link" href="{%url 'cand-joblist'%}">all Jobs</a>
             </div>
             <div class="navbar-nav mr-auto mb-2 mb-lg-0">
                 <a class="btn btn-outline-warning" href="#">logout</a>
