--- a/candidate/templates/cand-myprofile.html
+++ b/candidate/templates/cand-myprofile.html
@@ -4,31 +4,37 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+            crossorigin="anonymous"></script>
 
 </head>
 <body>
 <div class="container">
     <div class="row">
         <div class="col-4"></div>
+
         <div class="col-4">
-            <div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-4">
-      <img src="{{request.user.candidates.profile_pic.url}}" class="img-fluid rounded-start" alt="...">
-    </div>
-    <div class="col-md-8">
-      <div class="card-body">
-        <h5 class="card-title">{{request.user}}</h5>
-        <p class="card-text">{{request.user.candidates.age}}</p>
-        <p class="card-text">{{request.user.candidates.qualification}}</p>
-        <p class="card-text">{{request.user.candidates.skills}}</p>
-      </div>
-    </div>
-  </div>
-</div>
+            <div class="card" style="width: 18rem;">
+                <img src="{{request.user.candidates.profile_pic.url}}" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">{{request.user}}</h5>
+<!--                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the-->
+<!--                        card's content.</p>-->
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">{{request.user.candidates.age}}</li>
+                    <li class="list-group-item">{{request.user.candidates.qualification}}</li>
+                    <li class="list-group-item">{{request.user.candidates.skills}}</li>
+                </ul>
+                <div class="card-body">
+                    <a href="#" class="card-link">View</a>
+                    <a href="#" class="card-link">Edit</a>
+                </div>
+            </div>
         </div>
         <div class="col-4"></div>
     </div>
