--- a/candidate/templates/cand-Listjobs.html
+++ b/candidate/templates/cand-Listjobs.html
@@ -1,19 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
+{%extends 'base_cand.html'%}
 
-
-</head>
-<body>
+{%block body_block%}
 <div class="container">
     <div class="row">
         <div class="col-1"></div>
@@ -50,5 +37,4 @@
         <div class="col-1"></div>
     </div>
 </div>
-</body>
-</html>
+{%endblock%}
