--- a/candidate/templates/cand-myprofile.html
+++ b/candidate/templates/cand-myprofile.html
@@ -1,38 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
+{%extends 'base_cand.html'%}
 
-</head>
-<body>
+{%block body_block%}
 <div class="container">
     <div class="row">
         <div class="col-4"></div>
-
         <div class="col-4">
             <div class="card" style="width: 18rem;">
                 <img src="{{request.user.candidates.profile_pic.url}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{request.user}}</h5>
-<!--                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the-->
-<!--                        card's content.</p>-->
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">{{request.user.candidates.age}}</li>
-                    <li class="list-group-item">{{request.user.candidates.qualification}}</li>
-                    <li class="list-group-item">{{request.user.candidates.skills}}</li>
+                    <li class="list-group-item"><i>Age : </i>{{request.user.candidates.age}}</li>
+                    <li class="list-group-item"><i>Qualification : </i>{{request.user.candidates.qualification}}</li>
+                    <li class="list-group-item"><i>Skills : </i>{{request.user.candidates.skills}}</li>
                 </ul>
                 <div class="card-body">
-                    <a href="#" class="card-link">View</a>
-                    <a href="#" class="card-link">Edit</a>
+                    <a href="#" class="card-link btn btn-outline-info">View</a>
+                    <a href="#" class="card-link btn btn-outline-info">Edit</a>
                 </div>
             </div>
         </div>
@@ -40,5 +25,4 @@
     </div>
 </div>
 
-</body>
-</html>
+{%endblock%}
