--- a/employer/templates/emp-jobdetail.html
+++ b/employer/templates/emp-jobdetail.html
@@ -1,33 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
+{%extends 'base_emp.html'%}
 
-
-</head>
-<body>
+{%block body_block%}
 <div class="container">
     <div class="row">
-        <div class="col-4"></div>
         <div class="col-4">
-            {{request.user}} <br>
-            {{job.job_title}} <br>
-            {{job.posted_by}} <br>
-            {{job.job_description}} <br>
-            {{job.salary}} <br>
+
+        </div>
+        <div class="col-4">
+            <ul class="list-group">
+                <li class="list-group-item"><i>User : </i>{{request.user}}</li>
+                <li class="list-group-item"><i>Job Title : </i>{{job.job_title}}</li>
+                <li class="list-group-item"><i>Posted By : </i>{{job.posted_by}}</li>
+                <li class="list-group-item"><i>Job description : </i>{{job.job_description}}</li>
+                <li class="list-group-item"><i>Salary : </i>{{job.salary}}</li>
+            </ul>
+
         </div>
         <div class="col-4">
 
         </div>
     </div>
 </div>
-</body>
-</html>
+{%endblock%}
