--- a/employer/templates/emp-myprofile.html
+++ b/employer/templates/emp-myprofile.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
+{%extends 'base_emp.html'%}
 
-</head>
-<body>
+{%block body_block%}
 <div class="container">
     <div class="row">
         <div class="col-4"></div>
@@ -21,17 +9,15 @@
                 <img src="{{request.user.employer.logo.url}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">{{request.user.employer.company_name}}</h5>
-<!--                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the-->
-<!--                        card's content.</p>-->
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">{{request.user.employer.bio}}</li>
-                    <li class="list-group-item">{{request.user.employer.location}}</li>
-                    <li class="list-group-item">{{request.user.employer.services}}</li>
+                    <li class="list-group-item"><i>Bio : </i>{{request.user.employer.bio}}</li>
+                    <li class="list-group-item"><i>Location : </i>{{request.user.employer.location}}</li>
+                    <li class="list-group-item"><i>Services : </i>{{request.user.employer.services}}</li>
                 </ul>
                 <div class="card-body">
-                    <a href="#" class="card-link">View</a>
-                    <a href="#" class="card-link">Edit</a>
+                    <a href="#" class="card-link btn btn-outline-info">View</a>
+                    <a href="#" class="card-link btn btn-outline-info">Edit</a>
                 </div>
             </div>
         </div>
@@ -55,5 +41,4 @@
     </div>
 </div>
 
-</body>
-</html>
+{%endblock%}
