--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -1,37 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User</title>
-    <!-- CSS only -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+{%extends 'base.html'%}
 
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">User</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav me-auto mb-2 mb-lg-0">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <!-- <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Pricing</a> -->
-            </div>
-            <div class="navbar-nav mr-auto mb-2 mb-lg-0">
-                <a class="btn btn-outline-info" href="{%url 'signin'%}">SIGN IN</a>
-                <a class="btn btn-outline-warning" href="{%url 'signup'%}">SIGN UP</a>
-            </div>
-          </div>
-        </div>
-    </nav>
-    <div class="container" style="background-color: #e3f2fd;">
-    </div>
-</body>
-</html>
+{%block body_block%}
+<h1>Welcome...{{request.user}}</h1>
+
+{%endblock%}
