form styling & template styling

--- a/candidate/templates/cand-jobdetail.html
+++ b/candidate/templates/cand-jobdetail.html
@@ -13,8 +13,15 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i>Job Title : </i>{{job.job_title}}</li>
-                    <li class="list-group-item"><i>Salary : </i>{{job.salary}}</li>
                     <li class="list-group-item"><i>Job description : </i>{{job.job_description}}</li>
+                    <li class="list-group-item"><i>Role : </i>{{job.role}}</li>
+                    <li class="list-group-item"><i>Experience : </i>{{job.experience}}</li>
+                    <li class="list-group-item"><i>Location : </i>{{job.location}}</li>
+                    <li class="list-group-item"><i>Salary : </i>{{job.salary}}</li>
+                    <li class="list-group-item"><i>Qualification : </i>{{job.qualification}}</li>
+                    <li class="list-group-item"><i>Created Date : </i>{{job.created_date}}</li>
+                    <li class="list-group-item"><i>Last Date : </i>{{job.last_date}}</li>
+                    <li class="list-group-item"><i>Posted By : </i>{{job.posted_by}}</li>
                 </ul>
                 <div class="card-body">
                     <a href="{%url 'apply_now' job.id%}" class="card-link btn btn-outline-primary">Apply</a>
