--- a/employer/templates/emp-myprofile.html
+++ b/employer/templates/emp-myprofile.html
@@ -16,7 +16,7 @@
                     <li class="list-group-item"><i>Services : </i>{{request.user.employer.services}}</li>
                 </ul>
                 <div class="card-body">
-                    <a href="#" class="card-link btn btn-outline-info">View</a>
+<!--                    <a href="#" class="card-link btn btn-outline-info">View</a>-->
                     <a href="#" class="card-link btn btn-outline-info">Edit</a>
                 </div>
             </div>
