--- a/employer/templates/emp-jobdetail.html
+++ b/employer/templates/emp-jobdetail.html
@@ -9,10 +9,16 @@
         <div class="col-4">
             <ul class="list-group">
                 <li class="list-group-item"><i>User : </i>{{request.user}}</li>
-                <li class="list-group-item"><i>Job Title : </i>{{job.job_title}}</li>
                 <li class="list-group-item"><i>Posted By : </i>{{job.posted_by}}</li>
+                <li class="list-group-item"><i>Job Title : </i>{{job.job_title}}</li>
                 <li class="list-group-item"><i>Job description : </i>{{job.job_description}}</li>
+                <li class="list-group-item"><i>Role : </i>{{job.role}}</li>
+                <li class="list-group-item"><i>Experience : </i>{{job.experience}}</li>
+                <li class="list-group-item"><i>Location : </i>{{job.location}}</li>
                 <li class="list-group-item"><i>Salary : </i>{{job.salary}}</li>
+                <li class="list-group-item"><i>Created Date : </i>{{job.created_date}}</li>
+                <li class="list-group-item"><i>Last Date : </i>{{job.last_date}}</li>
+                <li class="list-group-item"><i>Qualification : </i>{{job.qualification}}</li>
             </ul>
 
         </div>
