--- a/employer/templates/emp-jobedit.html
+++ b/employer/templates/emp-jobedit.html
@@ -6,9 +6,10 @@
     <div class="col-4"></div>
     <div class="col-4">
       <form action="" method="post">
+        <h1>Job Update Form</h1>
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="Update">
+        <input class="btn btn-success" type="submit" value="Update">
       </form>
     </div>
     <div class="col-4"></div>
