--- a/employer/templates/emp-postjob.html
+++ b/employer/templates/emp-postjob.html
@@ -6,9 +6,11 @@
     <div class="col-4"></div>
     <div class="col-4">
       <form action="" method="post">
+        <h1>Job Registration Form</h1>
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="submit">
+        <input class="btn btn-success" type="submit" value="submit">
+        <input type="reset" class="btn btn-danger" value="Reset">
       </form>
     </div>
     <div class="col-4"></div>
