--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -10,6 +10,7 @@
         {%csrf_token%}
         {{form.as_p}}
         <input type="submit" class="btn btn-success" value="Submit">
+        <input type="reset" class="btn btn-danger" value="Reset">
       </form>
     </div>
     <div class="col-4"></div>
