--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -7,9 +7,11 @@
     <div class="col-4"></div>
     <div class="col-4">
       <form action="" method="post">
+        <h1>Registration Form</h1>
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="register">
+        <input type="submit" class="btn btn-success" value="register">
+        <input type="reset" class="btn btn-danger" value="Reset">
       </form>
     </div>
     <div class="col-4"></div>
