--- a/candidate/templates/cand-jobdetail.html
+++ b/candidate/templates/cand-jobdetail.html
@@ -24,7 +24,11 @@
                     <li class="list-group-item"><i>Posted By : </i>{{job.posted_by}}</li>
                 </ul>
                 <div class="card-body">
-                    <a href="{%url 'apply_now' job.id%}" class="card-link btn btn-outline-primary">Apply</a>
+                    {%if status%}
+                    <a href="#" class="card-link btn btn-warning">Applied</a>
+                    {%else%}
+                    <a href="{%url 'apply_now' job.id%}" class="card-link btn btn-outline-primary">Apply Now</a>
+                    {%endif%}
 
                 </div>
             </div>
