--- a/candidate/templates/base_cand.html
+++ b/candidate/templates/base_cand.html
@@ -31,6 +31,7 @@
                 <a class="nav-link" href="{%url 'cand-addprofile'%}">add profile</a>
                 {%endif%}
                 <a class="nav-link" href="{%url 'cand-joblist'%}">all Jobs</a>
+                <a class="nav-link" href="{%url 'cand-myapplic'%}">Applied Jobs</a>
             </div>
             <div class="navbar-nav mr-auto mb-2 mb-lg-0">
                 <a class="btn btn-outline-warning" href="{%url 'signout'%}">logout</a>
