--- a/employer/templates/emp-joblist.html
+++ b/employer/templates/emp-joblist.html
@@ -27,16 +27,18 @@
                     <th>Action</th>
                 </tr>
                 {%for job in jobs%}
-                <td>{{job.job_title}}</td>
-                <td>{{job.experience}}</td>
-                <td>{{job.qualification}}</td>
-                <td>{{job.role}}</td>
-                <td>{{job.last_date}}</td>
-                <td>
-                    <a class="btn btn-outline-primary" href="{%url 'emp-jobdetail' job.id%}">Details</a>
-                    <a class="btn btn-outline-primary" href="{%url 'emp-jobedit' job.id%}">Update</a>
-                    <a class="btn btn-outline-primary" href="">View Application</a>
-                </td>
+                <tr>
+                    <td>{{job.job_title}}</td>
+                    <td>{{job.experience}}</td>
+                    <td>{{job.qualification}}</td>
+                    <td>{{job.role}}</td>
+                    <td>{{job.last_date}}</td>
+                    <td>
+                        <a class="btn btn-outline-primary" href="{%url 'emp-jobdetail' job.id%}">Details</a>
+                        <a class="btn btn-outline-primary" href="{%url 'emp-jobedit' job.id%}">Update</a>
+                        <a class="btn btn-outline-primary" href="{%url 'emp-viewappl' job.id%}">View Application</a>
+                    </td>
+                </tr>
                 {%endfor%}
             </table>
         </div>
