applicant profile view

--- a/employer/templates/emp-viewapplication.html
+++ b/employer/templates/emp-viewapplication.html
@@ -3,28 +3,32 @@
 {%block body_block%}
 
 <div class="row">
-    <div class="col-4"></div>
-    <div class="col-4">
+    <div class="col-3"></div>
+    <div class="col-6">
         {%for app in vw_app%}
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="">
             <!--  <img src="..." class="card-img-top" alt="...">-->
             <!--  <div class="card-body">-->
             <!--    <h5 class="card-title">Card title</h5>-->
             <!--    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
             <!--  </div>-->
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">{{app.applicant}}</li>
-                <li class="list-group-item">{{app.job}}</li>
-                <li class="list-group-item">{{app.date}}</li>
+                <li class="list-group-item"><i>Applicant : </i>{{app.applicant}}</li>
+                <li class="list-group-item"><i>Job : </i>{{app.job}}</li>
+                <li class="list-group-item"><i>Role : </i>{{app.job.role}}</li>
+                <li class="list-group-item"><i>Applied Date : </i>{{app.date}}</li>
+                <li class="list-group-item"><i>Last Date : </i>{{app.job.last_date}}</li>
+                <li class="list-group-item"><i>Candidate Qualification : </i>{{app.applicant.candidates.qualification}}</li>
             </ul>
             <div class="card-body">
-                <a href="#" class="card-link btn btn-info">view Application</a>
+                <a href="{%url 'emp-apptprof' app.id%}" class="card-link btn btn-info">view Profile</a>
 <!--                <a href="#" class="card-link">Another link</a>-->
             </div>
         </div>
+        <hr>
         {%endfor%}
     </div>
-    <div class="col-4"></div>
+    <div class="col-3"></div>
 </div>
 
 
