--- a/employer/templates/emp-viewapplication.html
+++ b/employer/templates/emp-viewapplication.html
@@ -5,7 +5,9 @@
 <div class="row">
     <div class="col-3"></div>
     <div class="col-6">
+        {%if vw_app%}
         {%for app in vw_app%}
+
         <div class="card" style="">
             <!--  <img src="..." class="card-img-top" alt="...">-->
             <!--  <div class="card-body">-->
@@ -26,7 +28,13 @@
             </div>
         </div>
         <hr>
+
         {%endfor%}
+
+        {%else%}
+        <h4>no new application</h4>
+        {%endif%}
+
     </div>
     <div class="col-3"></div>
 </div>
