--- a/employer/templates/emp-joblist.html
+++ b/employer/templates/emp-joblist.html
@@ -37,6 +37,7 @@
                         <a class="btn btn-outline-primary" href="{%url 'emp-jobdetail' job.id%}">Details</a>
                         <a class="btn btn-outline-primary" href="{%url 'emp-jobedit' job.id%}">Update</a>
                         <a class="btn btn-outline-primary" href="{%url 'emp-viewappl' job.id%}">View Application</a>
+                        <a class="btn btn-outline-primary" href="#">Short list</a>
                     </td>
                 </tr>
                 {%endfor%}
