--- a/employer/templates/emp-myprofile.html
+++ b/employer/templates/emp-myprofile.html
@@ -17,7 +17,7 @@
                 </ul>
                 <div class="card-body">
 <!--                    <a href="#" class="card-link btn btn-outline-info">View</a>-->
-                    <a href="#" class="card-link btn btn-outline-info">Edit</a>
+                    <a href="{%url 'emp-profupdate' request.user.employer.id%}" class="card-link btn btn-outline-info">Edit</a>
                 </div>
             </div>
         </div>
