--- a/employer/templates/emp-home.html
+++ b/employer/templates/emp-home.html
@@ -2,6 +2,23 @@
 
 {%block body_block%}
 <h1>hiii</h1>
+<div class="row">
+    <div class="col-4"></div>
+    <div class="col-4">
+        {% if messages %}
+        {%for message in messages%}
+        {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+        <div class="bg-info">
+            {{message}}
+        </div>
+
+        {% endif %}
+
+        {%endfor%}
+        {% endif %}
+    </div>
+    <div class="col-4"></div>
+</div>
 
 {%endblock%}
 
