--- a/employer/templates/emp-joblist.html
+++ b/employer/templates/emp-joblist.html
@@ -35,9 +35,9 @@
                     <td>{{job.last_date}}</td>
                     <td>
                         <a class="btn btn-outline-primary" href="{%url 'emp-jobdetail' job.id%}">Details</a>
-                        <a class="btn btn-outline-primary" href="{%url 'emp-jobedit' job.id%}">Update</a>
-                        <a class="btn btn-outline-primary" href="{%url 'emp-viewappl' job.id%}">View Application</a>
-                        <a class="btn btn-outline-primary" href="#">Short list</a>
+<!--                        <a class="btn btn-outline-primary" href="{%url 'emp-jobedit' job.id%}">Update</a>-->
+                        <a class="btn btn-outline-primary" href="{%url 'emp-viewappl' job.id%}">Applications</a>
+                        <a class="btn btn-outline-primary" href="{%url 'emp-shortlist' job.id%}">Short list</a>
                     </td>
                 </tr>
                 {%endfor%}
