--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+<div class="container-fluid">
 <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Job Portal</a>
@@ -35,7 +36,6 @@
         </div>
     </div>
 </nav>
-<div class="container" style="background-color: #e3f2fd;">
 </div>
 {%block body_block%}
 
