--- a/candidate/templates/base_cand.html
+++ b/candidate/templates/base_cand.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+<div class="container-fluid">
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">{{request.user}}</a>
@@ -40,6 +41,7 @@
         </div>
     </div>
 </nav>
+</div>
 {%block body_block%}
 
 
