--- a/candidate/templates/cand-updateprofile.html
+++ b/candidate/templates/cand-updateprofile.html
@@ -6,9 +6,10 @@
     <div class="col-4"></div>
     <div class="col-4">
       <form action="" method="post" enctype="multipart/form-data">
+        <h3>Profile</h3>
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="update">
+        <input class="form-control btn btn-success" type="submit" value="Update">
       </form>
     </div>
     <div class="col-4"></div>
