--- a/employer/templates/emp-applntprof.html
+++ b/employer/templates/emp-applntprof.html
@@ -1,29 +1,32 @@
 {%extends 'base_emp.html'%}
 
 {%block body_block%}
-<div class="row">
-    <div class="col-4"></div>
-    <div class="col-4">
-        <div class="card" style="width: 18rem;">
-            <img src="{{apt.applicant.candidates.profile_pic.url}}" class="card-img-top" alt="no pic">
-            <div class="card-body">
-                <h5 class="card-title">..</h5>
-<!--                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the-->
-<!--                    card's content.</p>-->
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Qualification : {{apt.applicant.candidates.qualification}}</li>
-                <li class="list-group-item">Age : {{apt.applicant.candidates.age}}</li>
-                <li class="list-group-item">Skills : {{apt.applicant.candidate.skills}}</li>
-                <li class="list-group-item">CV : <a href="{{apt.applicant.candidates.cv.url}}">{{apt.applicant.candidates.cv}}</a></li>
-            </ul>
-            <div class="card-body">
-                <a href="{%url 'emp-a_status' apt.id%}" class="card-link btn btn-success">Accept</a>
-                <a href="{%url 'emp-r_status' apt.id%}" class="card-link btn btn-danger">Reject</a>
+<div class="container">
+    <div class="row">
+        <div class="col-4"></div>
+        <div class="col-4">
+            <div class="card" style="width: 18rem;">
+                <img src="{{apt.applicant.candidates.profile_pic.url}}" class="card-img-top" alt="no pic">
+                <div class="card-body">
+                    <h5 class="card-title">..</h5>
+                    <!--                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the-->
+                    <!--                    card's content.</p>-->
+                </div>
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Qualification : {{apt.applicant.candidates.qualification}}</li>
+                    <li class="list-group-item">Age : {{apt.applicant.candidates.age}}</li>
+                    <li class="list-group-item">Skills : {{apt.applicant.candidate.skills}}</li>
+                    <li class="list-group-item">CV : <a href="{{apt.applicant.candidates.cv.url}}">{{apt.applicant.candidates.cv}}</a>
+                    </li>
+                </ul>
+                <div class="card-body">
+                    <a href="{%url 'emp-a_status' apt.id%}" class="card-link btn btn-success">Accept</a>
+                    <a href="{%url 'emp-r_status' apt.id%}" class="card-link btn btn-danger">Reject</a>
+                </div>
             </div>
         </div>
+        <div class="col-4"></div>
     </div>
-    <div class="col-4"></div>
 </div>
 
 {%endblock%}
