--- a/employer/templates/emp-shortlist.html
+++ b/employer/templates/emp-shortlist.html
@@ -1,43 +1,76 @@
 {%extends 'base_emp.html'%}
 
 {%block body_block%}
+<div class="container">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6">
+            {%if application%}
+            {%for acpt in application%}
 
-<div class="row">
-    <div class="col-3"></div>
-    <div class="col-6">
-        {%if application%}
-        {%for acpt in application%}
-
-        <div class="card" style="">
-            <!--  <img src="..." class="card-img-top" alt="...">-->
-            <!--  <div class="card-body">-->
-            <!--    <h5 class="card-title">Card title</h5>-->
-            <!--    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-            <!--  </div>-->
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><i>Applicant : </i>{{acpt.applicant}}</li>
-                <li class="list-group-item"><i>Job : </i>{{acpt.job}}</li>
-                <li class="list-group-item"><i>Role : </i>{{acpt.job.role}}</li>
-                <li class="list-group-item"><i>Applied Date : </i>{{acpt.date}}</li>
-                <li class="list-group-item"><i>Last Date : </i>{{acpt.job.last_date}}</li>
-                <li class="list-group-item"><i>Candidate Qualification : </i>{{acpt.applicant.candidates.qualification}}</li>
-            </ul>
-            <div class="card-body">
-                <a href="" class="card-link btn btn-info">view Profile</a>
-<!--                <a href="#" class="card-link">Another link</a>-->
+            <div class="card" style="">
+                <!--              <img src="{{acpt.applicant.candidates.profile_pic.url}}" class="card-img-top" height="200px" width="200px" alt="...">-->
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item"><i>Applicant : </i>{{acpt.applicant}}</li>
+                    <li class="list-group-item"><i>Job : </i>{{acpt.job}}</li>
+                    <li class="list-group-item"><i>Role : </i>{{acpt.job.role}}</li>
+                    <li class="list-group-item"><i>Applied Date : </i>{{acpt.date}}</li>
+                    <li class="list-group-item"><i>Last Date : </i>{{acpt.job.last_date}}</li>
+                    <li class="list-group-item"><i>Candidate Qualification : </i>{{acpt.applicant.candidates.qualification}}
+                    </li>
+                </ul>
+                <div class="card-body">
+                    <!--                <a href="" class="card-link btn btn-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop">view Profile</a>-->
+                    <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                        View Profile
+                    </button>
+                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false"
+                     tabindex="-1"
+                     aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="staticBackdropLabel">candidate Profile</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <!--kitchen sink-->
+                                <div class="card" style="">
+                                    <img src="{{acpt.applicant.candidates.profile_pic.url}}" height="200px"
+                                         width="200px"
+                                         class="card-img-top" alt="...">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item">Qualification :
+                                            {{acpt.applicant.candidates.qualification}}
+                                        </li>
+                                        <li class="list-group-item">Age : {{acpt.applicant.candidates.age}}</li>
+                                        <li class="list-group-item">Skills : {{acpt.applicant.candidate.skills}}</li>
+                                        <li class="list-group-item">CV : <a href="{{acpt.applicant.candidates.cv.url}}">{{acpt.applicant.candidates.cv}}</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                                <!--                            <button type="button" class="btn btn-success">Ok</button>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <hr>
+
+            {%endfor%}
+
+            {%else%}
+            <h4>no accepted application</h4>
+            {%endif%}
         </div>
-        <hr>
-
-        {%endfor%}
-
-        {%else%}
-        <h4>no accepted application</h4>
-        {%endif%}
-
+        <div class="col-3"></div>
     </div>
-    <div class="col-3"></div>
 </div>
-
 
 {%endblock%}
