--- a/employer/templates/emp-updateprofile.html
+++ b/employer/templates/emp-updateprofile.html
@@ -8,7 +8,7 @@
       <form action="" method="post" enctype="multipart/form-data">
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="update">
+        <input class="form-control btn btn-success" type="submit" value="update">
       </form>
     </div>
     <div class="col-4"></div>
