--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -1,6 +1,9 @@
 {%extends 'base.html'%}
 
 {%block body_block%}
-<h1>Welcome...{{request.user}}</h1>
+<div class="container-fluid">
+    <h1>Welcome...{{request.user}}</h1>
+
+</div>
 
 {%endblock%}
