--- a/candidate/templates/base_cand.html
+++ b/candidate/templates/base_cand.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-<div class="container-fluid">
+<!--<div class="container-fluid">-->
 <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">{{request.user}}</a>
@@ -41,7 +41,7 @@
         </div>
     </div>
 </nav>
-</div>
+<!--</div>-->
 {%block body_block%}
 
 
