--- a/employer/templates/base_emp.html
+++ b/employer/templates/base_emp.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-<div class="container-fluid">
+<!--<div class="container-fluid">-->
     <nav class="navbar navbar-expand-lg bg-light">
         <a class="navbar-brand" href="#">{{request.user}}</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -39,7 +39,7 @@
             </div>
         </div>
     </nav>
-</div>
+<!--</div>-->
 
 {%block body_block%}
 
