--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,11 +13,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
 <body>
-<div class="container-fluid">
-<nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd;">
+<!--<div class="container-fluid">-->
+<nav class="navbar navbar-expand-lg" style="background-color:#8453ed;" id="navcolor">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Job Portal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
@@ -36,7 +38,7 @@
         </div>
     </div>
 </nav>
-</div>
+<!--</div>-->
 {%block body_block%}
 
 
