--- a/candidate/templates/cand-jobdetail.html
+++ b/candidate/templates/cand-jobdetail.html
@@ -1,16 +1,16 @@
 {%extends 'base_cand.html'%}
 
 {%block body_block%}
-<div class="container">
+<div class="container mt-3">
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <!--    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-                </div>
+<!--                <img src="" class="card-img-top" alt="...">-->
+<!--                <div class="card-body">-->
+<!--                    <h5 class="card-title">Card title</h5>-->
+<!--                    &lt;!&ndash;    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>&ndash;&gt;-->
+<!--                </div>-->
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><i>Job Title : </i>{{job.job_title}}</li>
                     <li class="list-group-item"><i>Job description : </i>{{job.job_description}}</li>
