--- a/candidate/templates/cand-Listjobs.html
+++ b/candidate/templates/cand-Listjobs.html
@@ -1,7 +1,7 @@
 {%extends 'base_cand.html'%}
 
 {%block body_block%}
-<div class="container">
+<div class="container mt-3">
     <div class="row">
         <div class="col-1"></div>
         <div class="col-10">
@@ -22,7 +22,7 @@
                     <td>{{job.role}}</td>
                     <td>{{job.last_date}}</td>
                     <td>
-                        <a class="btn btn-outline-primary" href="{%url 'cand-jobdetail' job.id%}">View</a>
+                        <a class="btn btn-outline-info" href="{%url 'cand-jobdetail' job.id%}">View</a>
                     </td>
                 </tr>
                 {%endfor%}
