--- a/candidate/templates/cand-home.html
+++ b/candidate/templates/cand-home.html
@@ -2,11 +2,11 @@
 
 {%block body_block%}
 
-<div class="container">
+<div class="container mt-3">
     <div class="row">
         <div class="col-3">
             <form action="" method="get">
-                <div class="col">
+                <div class="col mb-2">
                     <div class="col-2">job titile: {{filter.form.job_title}}</div>
                     <div class="col-2">role: {{filter.form.role}}</div>
                     <div class="col-2">qualification : {{filter.form.qualification}}</div>
