--- a/employer/templates/emp-updateprofile.html
+++ b/employer/templates/emp-updateprofile.html
@@ -1,11 +1,12 @@
 {%extends 'base_emp.html'%}
 
 {%block body_block%}
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <div class="col-4"></div>
     <div class="col-4">
       <form action="" method="post" enctype="multipart/form-data">
+        <h1>Update Profile</h1>
         {%csrf_token%}
         {{form.as_p}}
         <input class="form-control btn btn-success" type="submit" value="update">
