--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -20,14 +20,14 @@
 <!--<div class="container-fluid">-->
 <nav class="navbar navbar-expand-lg" style="background-color:#8453ed;" id="navcolor">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Job Portal</a>
+        <a class="navbar-brand text-white" href="#">Job Portal</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                <a class="nav-link active" aria-current="page" href="{%url 'users-home'%}">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="{%url 'users-home'%}">Home</a>
                 <!-- <a class="nav-link" href="#">Features</a>
                 <a class="nav-link" href="#">Pricing</a> -->
             </div>
