--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -2,7 +2,7 @@
 
 {%block body_block%}
 
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <div class="col-4"></div>
     <div class="col-4">
