--- a/employer/templates/emp-shortlist.html
+++ b/employer/templates/emp-shortlist.html
@@ -39,8 +39,8 @@
                             <div class="modal-body">
                                 <!--kitchen sink-->
                                 <div class="card" style="">
-                                    <img src="{{acpt.applicant.candidates.profile_pic.url}}" height="200px"
-                                         width="200px"
+                                    <img src="{{acpt.applicant.candidates.profile_pic.url}}" height="60%"
+                                         width="50%"
                                          class="card-img-top" alt="...">
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">Qualification :
