--- a/candidate/templates/cand-home.html
+++ b/candidate/templates/cand-home.html
@@ -2,7 +2,7 @@
 
 {%block body_block%}
 
-<div class="container mt-3">
+<div class="container-fluid mt-3">
     <div class="row">
         <div class="col-3">
             <form action="" method="get">
