--- a/candidate/templates/cand-myprofile.html
+++ b/candidate/templates/cand-myprofile.html
@@ -1,7 +1,7 @@
 {%extends 'base_cand.html'%}
 
 {%block body_block%}
-<div class="container mt-3">
+<div class="container-fluid mt-3">
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
