--- a/employer/templates/emp-profile.html
+++ b/employer/templates/emp-profile.html
@@ -8,7 +8,7 @@
       <form action="" method="post" enctype="multipart/form-data">
         {%csrf_token%}
         {{form.as_p}}
-        <input type="submit" value="submit">
+        <input type="submit" class="form-control btn btn-success" value="submit">
       </form>
     </div>
     <div class="col-4"></div>
