--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -27,7 +27,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav me-auto mb-2 mb-lg-0">
-                <a class="nav-link active text-white" aria-current="page" href="{%url 'users-home'%}">Home</a>
+<!--                <a class="nav-link active text-white" aria-current="page" href="{%url 'users-home'%}">Home</a>-->
                 <!-- <a class="nav-link" href="#">Features</a>
                 <a class="nav-link" href="#">Pricing</a> -->
             </div>
